# TclToTextFileGenerator

./: .gitignore  CMakeLists.txt  README.md
TestFiles/: testt.xml
doc/: Changelog.docx  Dictionary.docx
src/: app.cpp  app.hpp  appwindow.cpp  appwindow.hpp  config.xml  main.cpp  tclToCAPL.cpp  tclToCAPL.hpp  tclToCAPL_actionsImpl.cpp  tclToCAPL_errorFileConfig.hpp  tclinterpreterpriv.hpp
src/TCL_CAPL_Parser/: FileAutoModifier.pro  FileAutoModifier.pro.user.d2a889f  app.cpp  app.hpp  appwindow.cpp  appwindow.hpp  config.xml  main.cpp  tclToCAPL.cpp  tclToCAPL.hpp  tclToCAPL_errorFileConfig.hpp  tclinterpreterpriv.hpp
src/TcFileModifier/: tcfilemodifier.cpp  tcfilemodifier.hpp  tcfilemodifierconfigbase.hpp  tcfilemodifierdata.cpp  tcfilemodifierdata.hpp  tcfilereader.cpp  tcfilereader.hpp  tcfilereaderconfig.cpp  tcfilereaderconfig.hpp  tcfilereaderinterpreter.cpp  tcfilereaderinterpreter.hpp
src/Tcl2Capl/: Kwestionariusz_wstępnego_wywiadu_przesiewowego_przed_szczepieniem_osoby_dorosłej_przeciw_COVID-19_(wersja_docx).docx  attributesController.cpp  attributesController.hpp  caplFunctionDefiniitions.hpp  caplfunctiondefinitions.cpp  controller.cpp  controller.hpp  controllerConfigInfo_writeXml.cpp  controllerconfig.cpp  controllerconfig.hpp  controllerconfiginfo.cpp  controllerconfiginfo.hpp  controllerconfiginfo_modifierConfig.cpp  controllerconfigmanager.cpp  controllerconfigmanager.hpp  controllerconfigxmldata.hpp  corruptedconfiginfoevent.hpp  tcl2caplprogressevent.hpp  userinputconfig.hpp
src/Tcl2CaplPanels/: tcl2caplfileparserinstance.cpp  tcl2caplfileparserinstance.hpp  tcl2caplfileparserpanel.cpp  tcl2caplfileparserpanel.hpp  tcl2caplinstructioninstance.cpp  tcl2caplinstructioninstance.hpp  (+2 more)
(+328 files in other folders)
